refactor: remove unused imports and redundant code across the codebase
- Cleaned up unused imports in several classes to improve code readability.
- Removed redundant code snippets, including unused methods and annotations.
- Fixed minor formatting issues in JPQL queries for better consistency.
- Updated method call in `InventoryServiceTest` to replace redundant access pattern.